Fix: Hangman - white on white is hard to read

--- a/less/hangman.less
+++ b/less/hangman.less
@@ -122,6 +122,11 @@
                         background-repeat: no-repeat no-repeat;
                     }
                 }
+
+                p.info {
+                    width: 280px;
+                    background-color: rgba(127, 140, 141,.7);
+                }
             }
 
         }
@@ -137,6 +142,9 @@
             position: absolute;
             bottom: 0px;
 
+            float: left;
+
+            margin-right: 100px;
             padding: 10px;
 
             z-index: 100;
